# pyrs

./: .gitignore  Cargo.toml  README.md  pyproject.toml
pysrc/: main.py  utils.py
src/: lib.rs  main.rs
tests/: test_utils.py
