[tool.poetry]
name = "pyrs"
version = "0.1.0"
description = ""
authors = ["TorgeirBrenn <torgeir.brenn@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
matrix_operations = { file = "target/wheels/matrix_operations-0.1.0-cp311-cp311-macosx_11_0_arm64.whl" }

[tool.poetry.dev-dependencies]
pytest = "*"
maturin = "*"

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"